			  - 2001-10-27:  Moved all includes inside view.inc.php to all invocation files  (Niels) 
			  - 2002-02-06:  view.inc.php is now split into multiple libraries, so only code actually needed is included to achieve a big improvement in performance  (Niels) 
			  - 2002-03-07:  Moved invocation code into lib-invocation.inc.php  (Matteo) 

			+ Misc changes
			  - 2001-10-20:  Moved some functions around to make sure no unneeded functions were included during invocation.  (Niels) 
			  - 2001-10-24:  Removed space from UNIQUE INDEX definition in all.sql  (Niels) 
			  - 2001-10-24:  Added $phpads_proxy_lookup option  (Niels) 
			  - 2001-10-25:  Removed path detection from config.inc.php, to prevent it from being executed twice  (Niels) 
			  - 2001-10-25:  Added filter to make sure keywords are entered the right way  (Niels) 
			  - 2001-11-04:  Added messages for empty lists of zones, stats and clients  (Niels) 
			  - 2001-11-11:  Added a database compatibility mode, to solve potential problems when the database connection is shared with another product or script  (Niels) 
			  - 2001-11-15:  Added width and height to the array returned by view_raw()  (Niels) 
			  - 2001-11-15:  Added backwards compatibility for mixed case parameters  (Niels) 
			  - 2001-11-16:  Added speed optimalisation, only associate array is used  (Niels) 
			  - 2001-11-18:  Changed layout of section-tabs  (Niels) 
			  - 2001-11-22:  Added names in from and to headers when sending e-mails  (Matteo) 
			  - 2001-11-25:  Added error message for possible exploit  (Niels) 
			  - 2001-11-28:  Added support for compact stats to hourly stats page  (Niels) 
			  - 2001-12-01:  Added application title to page title  (Niels) 
			  - 2001-12-01:  Renamed some pages to make it more logical  (Niels) 
			  - 2001-12-01:  Changed the icons of acls and activate/deactivate  (Niels) 
			  - 2001-12-02:  Added return url to all delete actions  (Niels) 